set(DRAW_NAME draw)
set(DRAW_SOURCES draw.cpp)

add_executable(${DRAW_NAME} ${DRAW_SOURCES})

target_include_directories(${DRAW_NAME} PRIVATE ${OGDF_INCLUDE_DIRS})
target_link_libraries(${DRAW_NAME} OGDF)

set_target_properties(${DRAW_NAME}
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin"
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/bin"
    )
